// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField renders as expected in the happy path 1`] = `
<div>
  <div
    class="amplify-flex amplify-field amplify-textfield"
  >
    <label
      class="amplify-label"
      for="mock-id-0"
    >
      Username
    </label>
    <div
      class="amplify-flex amplify-field-group amplify-field-group--horizontal"
    >
      <div
        class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
      >
        <input
          aria-invalid="false"
          autocapitalize="off"
          autocomplete="username"
          class="amplify-input amplify-field-group__control"
          id="mock-id-0"
          name="username"
          placeholder="Enter your Username"
          required=""
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField renders as expected in the unhappy path 1`] = `
<div>
  <div
    class="amplify-flex amplify-field amplify-textfield"
  >
    <label
      class="amplify-label"
      for="amplify-id-:r1:"
    >
      Username
    </label>
    <div
      class="amplify-flex amplify-field-group amplify-field-group--horizontal"
    >
      <div
        class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
      >
        <input
          aria-describedby="amplify-id-:r0:"
          aria-invalid="true"
          autocapitalize="off"
          autocomplete="username"
          class="amplify-input amplify-field-group__control amplify-input--error"
          id="amplify-id-:r1:"
          name="username"
          placeholder="Enter your Username"
          required=""
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    data-amplify-sign-up-errors="true"
    id="amplify-id-:r0:"
  >
    <p
      class="amplify-text amplify-text--error"
      role="alert"
    >
      Username cannot be empty.
    </p>
  </div>
</div>
`;
